// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListRow should match snapshot 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
      "overflow": "hidden",
    }
  }
>
  <CustomListRow
    enabled={true}
    id="21345"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "color": "#3d3c40",
          "flexDirection": "row",
        }
      }
    >
      <Connect(ProfilePicture)
        size={32}
        userId="21345"
      />
    </Component>
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <Component>
        <Component
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 15,
            }
          }
        >
          @user
        </Component>
      </Component>
    </Component>
  </CustomListRow>
</Component>
`;

exports[`UserListRow should match snapshot for  currentUser with (you) populated in list 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
      "overflow": "hidden",
    }
  }
>
  <CustomListRow
    enabled={true}
    id="21345"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "color": "#3d3c40",
          "flexDirection": "row",
        }
      }
    >
      <Connect(ProfilePicture)
        size={32}
        userId="21345"
      />
    </Component>
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <Component>
        <Component
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 15,
            }
          }
        />
      </Component>
    </Component>
  </CustomListRow>
</Component>
`;

exports[`UserListRow should match snapshot for deactivated user 1`] = `
<Component
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
      "overflow": "hidden",
    }
  }
>
  <CustomListRow
    enabled={true}
    id="21345"
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "color": "#3d3c40",
          "flexDirection": "row",
        }
      }
    >
      <Connect(ProfilePicture)
        size={32}
        userId="21345"
      />
    </Component>
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <Component>
        <Component
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 15,
            }
          }
        >
          @user
        </Component>
      </Component>
      <Component>
        <Component
          style={
            Object {
              "color": undefined,
              "fontSize": 12,
              "marginTop": 2,
            }
          }
        />
      </Component>
    </Component>
  </CustomListRow>
</Component>
`;
